# bfm-data

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  compute_stats_overall.sh  documentation.ipynb  install.sh  makefile  parallel_batch_create.sh  pyproject.toml  requirements.txt  verify_batch.py
bfm_data/: main.py
bfm_data/config/copernicus_land_config/: key.json
bfm_data/data_ingestion/api_clients/: bold.py  copernicus_land.py  era5.py  inaturalist.py  mapoflife.py  xenocanto.py
bfm_data/data_ingestion/ingestion_scripts/: agriculture.py  copernicus_land.py  forest.py  inaturalist.py  land.py  livingplanetindex.py  red_list.py  species_occurences.py  worldbank.py  xenocanto.py
bfm_data/data_preprocessing/: preprocessing.py
bfm_data/data_preprocessing/cleaning/: edna.py  image.py
bfm_data/data_preprocessing/feature_extraction/: audio.py  edna.py  text.py
bfm_data/data_preprocessing/indicators/: combine_agriculture.py  combine_land.py  red_list.py  world_bank_indicators.py
bfm_data/data_preprocessing/species/: check_data.ipynb  coordinate_playground.ipynb  create_28_species_dataset.py  plot_with_coordinates.py  validation.py  viewer.py
bfm_data/data_preprocessing/transformation/: audio.py  edna.py  era5.py  image.py  text.py
bfm_data/dataset_creation/: batch.py  create_dataset.py  create_fast_xarray.py  create_species_dataset.py  final_stats.py  load_data.py  metadata.py  parallel_batch.py  preprocessing.py  species_utils.py  utils.py
bfm_data/dataset_creation/batch_creation/: batch_stats.py  batch_viewer.py  build_batches_monthly.py  create_batches.sh  download_biocube.sh  env.sh  scan_biocube.py
bfm_data/helpers/: era5_api_config.py  folders_insights.py
bfm_data/monitoring_logging/monitoring/: memory.py
bfm_data/utils/: handle_values.py  plots.py  statistics.py
src/: main.py
src/config/: paths.py  settings.py
src/data_ingestion/: __init__.py
src/data_ingestion/api_clients/: bold.py  copernicus_land.py  downloader.py  era5.py  inaturalist.py  mapoflife.py  xenocanto.py
src/data_ingestion/ingestion_scripts/: agriculture.py  copernicus_land.py  forest.py  inaturalist.py  land.py  livingplanetindex.py  red_list.py  species_occurences.py  worldbank.py  xenocanto.py
src/data_preprocessing/: batch.py  metadata.py  preprocess.py  preprocessing.py  process.py
src/data_preprocessing/cleaning/: audio.py  edna.py  era5.py  image.py  text.py
src/data_preprocessing/feature_extraction/: audio.py  edna.py  image.py  text.py
src/data_preprocessing/transformation/: audio.py  edna.py  era5.py  image.py  text.py
src/dataset_creation/: batch.py  create_dataset.py  create_fast_xarray.py  create_species_dataset.py  final_stats.py  load_data.py  parallel_batch.py  preprocessing.py  save_data.py  species_utils.py
src/helpers/: clms_api_config.py  era5_api_config.py  folders_insights.py  handle_values.py  monitor.py
src/monitoring_logging/monitoring/: folder_size.py  memory.py
src/utils/: bold.py  downloader.py  era5.py  geo.py  handle_values.py  inaturalist.py  mapoflife.py  merge_data.py  plots.py  statistics.py  xenocanto.py
src/utils/downloading/: bold.py  downloader.py  era5.py  inaturalist.py  mapoflife.py  xenocanto.py
src/utils/preprocessing/: audio.py  image.py
test_data/image/: observations.txt
tests/: test_audio.py  test_downloader.py  test_edna.py  test_image.py  test_inaturalist.py  test_xenocanto.py
