[tool.poetry]
name = "src"
version = "0.1.0"
description = "The goal of this project is to create a data pipeline to prepare biodiversity data for foundation model."
authors = ["Stylianos Stasinos <stylianos.stasinos@tno.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
xenopy = "^0.0.4"
torchaudio = "^2.3.1"
pycountry = "^24.6.1"
flake8-pyproject="^1.2.3"
requests = "^2.32.3"
numpy = "^2.0.0"

[tool.poetry.scripts]
run-app = "src.main:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
extend-ignore = ["D203", "E203", "E251", "E266", "E302", "E305", "E401", "E402", "E501", "F401", "F403", "W503"]
exclude = [".git", "__pycache__", "dist", "venv"]

[tool.isort]
atomic = true
profile = "black"
skip_gitignore = true
