[tool.poetry]
name = "src"
version = "0.1.0"
description = "The goal of this project is to create a data pipeline to prepare biodiversity data for foundation model."
authors = ["Stylianos Stasinos <stylianos.stasinos@tno.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
xenopy = "^0.0.4"
torchaudio = "^2.3.1"
pycountry = "^24.6.1"
flake8-pyproject="^1.2.3"
requests = "^2.32.3"
numpy = "^2.0.0"
pre-commit = "^3.7.1"
pillow = "^10.4.0"
piexif = "^1.1.3"
geopy = "^2.4.1"
path = "^16.14.0"
cdsapi = "^0.7.0"
pydub = "^0.25.1"
librosa = "^0.10.2.post1"
torch = "^2.3.1"
rich = "^13.7.1"
matplotlib = "^3.9.1"
pandas = "^2.2.2"
pyarrow = "^17.0.0"
fastparquet = "^2024.5.0"
xarray = "^2024.7.0"
torchvision = "^0.19.0"
opencv-python = "^4.10.0.84"
scikit-image = "^0.24.0"
torchtext = "^0.18.0"
nltk = "^3.9.1"
textblob = "^0.18.0.post0"

[tool.poetry.scripts]
run-app = "src.main:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
extend-ignore = ["D203", "E203", "E251", "E266", "E302", "E305", "E401", "E402", "E501", "F401", "F403", "W503"]
exclude = [".git", "__pycache__", "dist", "venv"]

[tool.isort]
atomic = true
profile = "black"
skip_gitignore = true
